--- a/DocumentDuplicateChecking/DocumentDuplicateChecking/pom.xml
+++ b/DocumentDuplicateChecking/DocumentDuplicateChecking/pom.xml
@@ -130,6 +130,12 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>0.10.7</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.10.7</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
