--- a/front-end/nginx.conf
+++ b/front-end/nginx.conf
@@ -59,6 +59,15 @@ http {
             root html;
             index page.html;
         }
+
+        location ~ /user/ {
+            proxy_pass  http://127.0.0.1:8080;
+        }
+
+        location /403 {
+            root html/error
+            index 403.html
+        }
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
